# rust_builder

./: .gitignore  BUILD_WINDOWS.md  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: build-multi-platform.yml  build-windows.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
